Add content scripts to the extension

--- a/src/pages/contentScript.html
+++ b/src/pages/contentScript.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Easy Clipboard</title>
+    <title>Clipboard Share</title>
   </head>
   <body>
   <script type="text/javascript" src="contentScript.js"></script></body>
