--- a/src/pages/options.html
+++ b/src/pages/options.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Easy Clipboard</title>
+    <title>Clipboard Share</title>
   <link href="options.2fc9a416503f14a1b2c1.css" rel="stylesheet"></head>
   <body>
   <script type="text/javascript" src="options.js"></script></body>
