--- a/src/pages/popup.html
+++ b/src/pages/popup.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Easy Clipboard</title>
+    <title>Clipboard Share</title>
   <link href="popup.483c0d7db82c30a88c47.css" rel="stylesheet"></head>
   <body>
   <script type="text/javascript" src="popup.js"></script></body>
