--- a/src/pages/background.html
+++ b/src/pages/background.html
@@ -5,5 +5,6 @@
     <title>Clipboard Share</title>
   </head>
   <body>
-  <script type="text/javascript" src="background.js"></script></body>
+    <script type="text/javascript" src="background.js"></script>
+  </body>
 </html>
