Modify css files

--- a/src/pages/options.html
+++ b/src/pages/options.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Clipboard Share</title>
-  <link href="options.2fc9a416503f14a1b2c1.css" rel="stylesheet"></head>
+  <link href="options.css" rel="stylesheet"></head>
   <body>
   <script type="text/javascript" src="options.js"></script></body>
 </html>
