--- a/src/pages/popup.html
+++ b/src/pages/popup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Clipboard Share</title>
-  <link href="popup.483c0d7db82c30a88c47.css" rel="stylesheet"></head>
+  <link href="popup.css" rel="stylesheet"></head>
   <body>
   <script type="text/javascript" src="popup.js"></script></body>
 </html>
